logs/threadedcomments.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/threadedcomments'...
Listing './lib/python3.5/site-packages/threadedcomments/management'...
Listing './lib/python3.5/site-packages/threadedcomments/management/commands'...
Listing './lib/python3.5/site-packages/threadedcomments/templatetags'...
Compiling './lib/python3.5/site-packages/threadedcomments/templatetags/gravatar.py'...
***   File "./lib/python3.5/site-packages/threadedcomments/templatetags/gravatar.py", line 36
    raise template.TemplateSyntaxError, "%r tag: At least one argument should be provided." % tagname
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/threadedcomments/templatetags/threadedcommentstags.py'...
***   File "./lib/python3.5/site-packages/threadedcomments/templatetags/threadedcommentstags.py", line 32
    raise template.TemplateSyntaxError, "get_comment_url requires its parent object to be of type ThreadedComment"
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/threadedcomments-0.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
